# sample-return-robot

./: README.md  simulator-gazebo-1.7.6-2d-joint.patch
heightmap/: CMakeLists.txt  package.xml  package.xml~
heightmap/Media/models/: box.urdf
heightmap/launch/: empty_with_kulgur.launch  empty_world.launch  empty_world.launch~  robot_on_heightmap.launch  stlmap_world.launch  stlmap_world.launch~
heightmap/models/box/: manifest.xml  model.sdf  model.sdf~
heightmap/models/kulgur1/: model.sdf
heightmap/models/landmark_pole/: manifest.xml  model.sdf
heightmap/models/robot1/: manifest.xml  model.sdf  model.sdf~
heightmap/models/robot2/: manifest.xml  model.sdf
heightmap/worlds/: boxworld.world  boxworld.world~  empty_with_kulgur.world  heightmap.world  heightmap.world~  heightmap_kulgur_poles.world  robot_on_heightmap.world  robot_on_heightmap.world~  stlmesh.world  stlmesh.world~
kulgur1/: CMakeLists.txt  package.xml
kulgur1/include/: KulgurPlugin.h
kulgur1/launch/: empty_with_kulgur_bagging.launch  heightmap_poles.launch
kulgur1/msg/: LandmarkMeasurement.msg  LowOdometry.msg
kulgur1/src/: KulgurPlugin.cpp  bag2text.cpp  kulgur1_wheel_turn_and_odometry.cpp
kulgur1_gazebo_plugin/src/: kulgur1_wheel_turn_and_odometry.cpp
kulgur_msgs/: CMakeLists.txt  package.xml
kulgur_msgs/msg/: LandmarkMeasurementArray.msg
kulgur_pf1/: CMakeLists.txt  package.xml
kulgur_pf1/include/: KulgurOdometry.h  ParticleWeight.h  Particles.h  PredictParticles.h  SamplerLowVariance.h
kulgur_pf1/launch/: bag_to_pf1.launch  bag_to_pf_predict.launch  empty_kulgur_bag_pf1.launch  pf_predict_dbg.launch
kulgur_pf1/src/: KulgurOdometry.cpp  PF1.cpp  ParticleWeight.cpp  Particles.cpp  PredictParticles.cpp  SamplerLowVariance.cpp  pf_predict.cpp
kulgur_pf1/test/: ParticleWeightTest.cpp  ParticleWeightTest2.cpp  SamplerLowVarianceTest.cpp
kulgur_pos_map/: CMakeLists.txt  package.xml
kulgur_pos_map/src/: assert_example.cpp  map1.cpp
odom1/: CMakeLists.txt  package.xml
odom1/src/: diffdrive_control_plugin.cpp  diffdrive_wheel_angles_plugin.cpp  odom2.cpp
sample_detection/: CMakeLists.txt  biggestblob.py  package.xml
sample_detection/src/: blobdetection.cpp  find_objects.cpp  histogram_correlation.cpp  meanshift.cpp
teleop1/: CMakeLists.txt  compile.script  package.xml
teleop1/src/: kulgur1_teleop.cpp  teleop1.cpp
